Subo iconos navigation

--- a/AplicacionDeGestion/AplicacionDeGestion.csproj
+++ b/AplicacionDeGestion/AplicacionDeGestion.csproj
@@ -165,9 +165,13 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="assets\" />
     <Folder Include="servicios\" />
     <Folder Include="viewmodels\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="assets\Icons\clipboard.png" />
+    <Resource Include="assets\Icons\customer.png" />
+    <Resource Include="assets\Icons\parking.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
