Añado modificacions basicasd del proyecto

--- a/AplicacionDeGestion/AplicacionDeGestion.csproj
+++ b/AplicacionDeGestion/AplicacionDeGestion.csproj
@@ -34,6 +34,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>assets\Icons\parkingIcon.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Azure.Core, Version=1.19.0.0, Culture=neutral, PublicKeyToken=92742159e12e44c8, processorArchitecture=MSIL">
       <HintPath>..\packages\Azure.Core.1.19.0\lib\net461\Azure.Core.dll</HintPath>
@@ -180,6 +183,9 @@
     <Resource Include="assets\Icons\clipboard.png" />
     <Resource Include="assets\Icons\customer.png" />
     <Resource Include="assets\Icons\parking.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="assets\Icons\parkingIcon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
