--- a/AplicacionDeGestion/AplicacionDeGestion.csproj
+++ b/AplicacionDeGestion/AplicacionDeGestion.csproj
@@ -119,6 +119,9 @@
     <Compile Include="modelos\Vehiculo.cs" />
     <Compile Include="viewmodels\ModificarUsuarioUserControlVM.cs" />
     <Compile Include="viewmodels\CrearUsuarioUserControlVM.cs" />
+    <Compile Include="vistas\DialogoEliminar.xaml.cs">
+      <DependentUpon>DialogoEliminar.xaml</DependentUpon>
+    </Compile>
     <Compile Include="vistas\ModificarUsuarioUserControl.xaml.cs">
       <DependentUpon>ModificarUsuarioUserControl.xaml</DependentUpon>
     </Compile>
@@ -137,6 +140,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="vistas\DialogoEliminar.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="vistas\ModificarUsuarioUserControl.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
