creación archivos servicios

--- a/AplicacionDeGestion/AplicacionDeGestion.csproj
+++ b/AplicacionDeGestion/AplicacionDeGestion.csproj
@@ -121,6 +121,8 @@
     <Compile Include="modelos\Estacionamiento.cs" />
     <Compile Include="modelos\Vehiculo.cs" />
     <Compile Include="servicios\DatosService.cs" />
+    <Compile Include="servicios\Mensajes.cs" />
+    <Compile Include="servicios\NavigationService.cs" />
     <Compile Include="viewmodels\ModificarUsuarioUserControlVM.cs" />
     <Compile Include="viewmodels\CrearUsuarioUserControlVM.cs" />
     <Compile Include="vistas\ClientesUserControl.xaml.cs">
