--- a/AplicacionDeGestion/App.config
+++ b/AplicacionDeGestion/App.config
@@ -63,6 +63,10 @@
         <assemblyIdentity name="System.Threading.Tasks.Extensions" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.2.0.1" newVersion="4.2.0.1" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Syncfusion.Licensing" publicKeyToken="632609b4d040f6b4" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-19.4460.0.47" newVersion="19.4460.0.47" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
