--- a/AplicacionDeGestion/packages.config
+++ b/AplicacionDeGestion/packages.config
@@ -8,6 +8,11 @@
   <package id="RestSharp" version="107.1.2" targetFramework="net472" />
   <package id="Syncfusion.Licensing" version="19.4.0.47" targetFramework="net472" />
   <package id="Syncfusion.SfNavigationDrawer.WPF" version="19.4.0.47" targetFramework="net472" />
+  <package id="Syncfusion.Xamarin.Core" version="19.4.0.47" targetFramework="net472" />
+  <package id="Syncfusion.Xamarin.GridCommon" version="19.4.0.47" targetFramework="net472" />
+  <package id="Syncfusion.Xamarin.SfComboBox" version="19.4.0.47" targetFramework="net472" />
+  <package id="Syncfusion.Xamarin.SfDataGrid" version="19.4.0.47" targetFramework="net472" />
+  <package id="Syncfusion.Xamarin.SfNumericTextBox" version="19.4.0.47" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.6.0" targetFramework="net472" />
@@ -19,4 +24,5 @@
   <package id="System.Text.Json" version="5.0.0" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
+  <package id="Xamarin.Forms" version="4.5.0.617" targetFramework="net472" />
 </packages>
