--- a/AplicacionDeGestion/packages.config
+++ b/AplicacionDeGestion/packages.config
@@ -4,8 +4,14 @@
   <package id="Azure.Storage.Blobs" version="12.10.0" targetFramework="net472" />
   <package id="Azure.Storage.Common" version="12.9.0" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.Data.Sqlite" version="6.0.1" targetFramework="net472" />
+  <package id="Microsoft.Data.Sqlite.Core" version="6.0.1" targetFramework="net472" />
   <package id="Microsoft.Toolkit.Mvvm" version="7.1.2" targetFramework="net472" />
   <package id="RestSharp" version="107.1.2" targetFramework="net472" />
+  <package id="SQLitePCLRaw.bundle_e_sqlite3" version="2.0.6" targetFramework="net472" />
+  <package id="SQLitePCLRaw.core" version="2.0.6" targetFramework="net472" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3" version="2.0.6" targetFramework="net472" />
+  <package id="SQLitePCLRaw.provider.e_sqlite3" version="2.0.6" targetFramework="net472" />
   <package id="Syncfusion.Licensing" version="19.4.0.47" targetFramework="net472" />
   <package id="Syncfusion.SfNavigationDrawer.WPF" version="19.4.0.47" targetFramework="net472" />
   <package id="Syncfusion.Xamarin.Core" version="19.4.0.47" targetFramework="net472" />
