--- a/AplicacionDeGestion/packages.config
+++ b/AplicacionDeGestion/packages.config
@@ -12,12 +12,14 @@
   <package id="SQLitePCLRaw.core" version="2.0.6" targetFramework="net472" />
   <package id="SQLitePCLRaw.lib.e_sqlite3" version="2.0.6" targetFramework="net472" />
   <package id="SQLitePCLRaw.provider.e_sqlite3" version="2.0.6" targetFramework="net472" />
+  <package id="Syncfusion.Data.WPF" version="19.4.0.47" targetFramework="net472" />
   <package id="Syncfusion.Licensing" version="19.4.0.47" targetFramework="net472" />
+  <package id="Syncfusion.SfGrid.WPF" version="19.4.0.47" targetFramework="net472" />
   <package id="Syncfusion.SfNavigationDrawer.WPF" version="19.4.0.47" targetFramework="net472" />
+  <package id="Syncfusion.Shared.WPF" version="19.4.0.47" targetFramework="net472" />
   <package id="Syncfusion.Xamarin.Core" version="19.4.0.47" targetFramework="net472" />
   <package id="Syncfusion.Xamarin.GridCommon" version="19.4.0.47" targetFramework="net472" />
   <package id="Syncfusion.Xamarin.SfComboBox" version="19.4.0.47" targetFramework="net472" />
-  <package id="Syncfusion.Xamarin.SfDataGrid" version="19.4.0.47" targetFramework="net472" />
   <package id="Syncfusion.Xamarin.SfNumericTextBox" version="19.4.0.47" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net472" />
