--- a/AplicacionDeGestion/packages.config
+++ b/AplicacionDeGestion/packages.config
@@ -16,6 +16,7 @@
   <package id="Syncfusion.Licensing" version="19.4.0.47" targetFramework="net472" />
   <package id="Syncfusion.SfGrid.WPF" version="19.4.0.47" targetFramework="net472" />
   <package id="Syncfusion.SfNavigationDrawer.WPF" version="19.4.0.47" targetFramework="net472" />
+  <package id="Syncfusion.SfTextInputLayout.WPF" version="19.4.0.47" targetFramework="net472" />
   <package id="Syncfusion.Shared.WPF" version="19.4.0.47" targetFramework="net472" />
   <package id="Syncfusion.Xamarin.Core" version="19.4.0.47" targetFramework="net472" />
   <package id="Syncfusion.Xamarin.GridCommon" version="19.4.0.47" targetFramework="net472" />
