creación dao clientes

--- a/AplicacionDeGestion/App.config
+++ b/AplicacionDeGestion/App.config
@@ -29,7 +29,7 @@
                 <value>50</value>
             </setting>
             <setting name="rutaConexionBd" serializeAs="String">
-                <value>C:\parking</value>
+                <value>C:/parking</value>
             </setting>
         </AplicacionDeGestion.Properties.Settings>
     </userSettings>
