--- a/AplicacionDeGestion/packages.config
+++ b/AplicacionDeGestion/packages.config
@@ -7,6 +7,7 @@
   <package id="Microsoft.Data.Sqlite" version="6.0.1" targetFramework="net472" />
   <package id="Microsoft.Data.Sqlite.Core" version="6.0.1" targetFramework="net472" />
   <package id="Microsoft.Toolkit.Mvvm" version="7.1.2" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
   <package id="RestSharp" version="107.1.2" targetFramework="net472" />
   <package id="SQLitePCLRaw.bundle_e_sqlite3" version="2.0.6" targetFramework="net472" />
   <package id="SQLitePCLRaw.core" version="2.0.6" targetFramework="net472" />
