--- a/AplicacionDeGestion/App.config
+++ b/AplicacionDeGestion/App.config
@@ -31,6 +31,12 @@
             <setting name="rutaConexionBd" serializeAs="String">
                 <value>C:/parking</value>
             </setting>
+            <setting name="endpointFace" serializeAs="String">
+                <value>https://servicioface.cognitiveservices.azure.com/</value>
+            </setting>
+            <setting name="keyFace" serializeAs="String">
+                <value>495d5808afaa455c860b5f8b52f5c22e</value>
+            </setting>
         </AplicacionDeGestion.Properties.Settings>
     </userSettings>
   <runtime>
