añado ObservableObject a todas las VM, quizá haya que cambiar alguna en un futuro por ObservableRecipient

--- a/AplicacionDeGestion/AplicacionDeGestion.csproj
+++ b/AplicacionDeGestion/AplicacionDeGestion.csproj
@@ -171,6 +171,7 @@
     </ApplicationDefinition>
     <Compile Include="modelos\Cliente.cs" />
     <Compile Include="modelos\Estacionamiento.cs" />
+    <Compile Include="modelos\FaceAttributes.cs" />
     <Compile Include="modelos\Vehiculo.cs" />
     <Compile Include="servicios\AzureServices.cs" />
     <Compile Include="servicios\DatosService.cs" />
