--- a/AplicacionDeGestion/App.config
+++ b/AplicacionDeGestion/App.config
@@ -4,6 +4,9 @@
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
             <section name="AplicacionDeGestion.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+            <section name="AplicacionDeGestion.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
     </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
@@ -27,9 +30,6 @@
             </setting>
             <setting name="numeroPlazasMoto" serializeAs="String">
                 <value>50</value>
-            </setting>
-            <setting name="rutaConexionBd" serializeAs="String">
-                <value>C:/parking</value>
             </setting>
             <setting name="endpointFace" serializeAs="String">
                 <value>https://servicioface.cognitiveservices.azure.com/</value>
@@ -75,4 +75,11 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <applicationSettings>
+    <AplicacionDeGestion.Properties.Settings>
+      <setting name="rutaConexionBd" serializeAs="String">
+        <value>C:/parking/parking.db</value>
+      </setting>
+    </AplicacionDeGestion.Properties.Settings>
+  </applicationSettings>
 </configuration>
