--- a/AplicacionDeGestion/Properties/Settings.settings
+++ b/AplicacionDeGestion/Properties/Settings.settings
@@ -20,8 +20,8 @@
     <Setting Name="numeroPlazasMoto" Type="System.String" Scope="User">
       <Value Profile="(Default)">50</Value>
     </Setting>
-    <Setting Name="rutaConexionBd" Type="System.String" Scope="User">
-      <Value Profile="(Default)">C:/parking</Value>
+    <Setting Name="rutaConexionBd" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">C:/parking/parking.db</Value>
     </Setting>
     <Setting Name="endpointFace" Type="System.String" Scope="User">
       <Value Profile="(Default)">https://servicioface.cognitiveservices.azure.com/</Value>
