ClientesVM casi hecha.

--- a/AplicacionDeGestion/App.config
+++ b/AplicacionDeGestion/App.config
@@ -73,12 +73,16 @@
         <assemblyIdentity name="Syncfusion.Licensing" publicKeyToken="632609b4d040f6b4" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-19.4460.0.47" newVersion="19.4460.0.47" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="SQLitePCLRaw.core" publicKeyToken="1488e028ca7ab535" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.0.7.1395" newVersion="2.0.7.1395" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <applicationSettings>
     <AplicacionDeGestion.Properties.Settings>
       <setting name="rutaConexionBd" serializeAs="String">
-        <value>C:/parking/parking.db</value>
+        <value>C:\parking\parking.db</value>
       </setting>
     </AplicacionDeGestion.Properties.Settings>
   </applicationSettings>
