--- a/AplicacionDeGestion/packages.config
+++ b/AplicacionDeGestion/packages.config
@@ -9,10 +9,11 @@
   <package id="Microsoft.Toolkit.Mvvm" version="7.1.2" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
   <package id="RestSharp" version="106.15.0" targetFramework="net472" />
-  <package id="SQLitePCLRaw.bundle_e_sqlite3" version="2.0.6" targetFramework="net472" />
-  <package id="SQLitePCLRaw.core" version="2.0.6" targetFramework="net472" />
+  <package id="SQLitePCLRaw.bundle_e_sqlite3" version="2.0.7" targetFramework="net472" />
+  <package id="SQLitePCLRaw.core" version="2.0.7" targetFramework="net472" />
   <package id="SQLitePCLRaw.lib.e_sqlite3" version="2.0.7" targetFramework="net472" />
-  <package id="SQLitePCLRaw.provider.e_sqlite3" version="2.0.6" targetFramework="net472" />
+  <package id="SQLitePCLRaw.provider.dynamic_cdecl" version="2.0.7" targetFramework="net472" />
+  <package id="SQLitePCLRaw.provider.e_sqlite3" version="2.0.7" targetFramework="net472" />
   <package id="Syncfusion.Data.WPF" version="19.4.0.47" targetFramework="net472" />
   <package id="Syncfusion.Licensing" version="19.4.0.47" targetFramework="net472" />
   <package id="Syncfusion.SfGrid.WPF" version="19.4.0.47" targetFramework="net472" />
