--- a/AplicacionDeGestion/App.config
+++ b/AplicacionDeGestion/App.config
@@ -31,12 +31,6 @@
             <setting name="numeroPlazasMoto" serializeAs="String">
                 <value>50</value>
             </setting>
-            <setting name="endpointFace" serializeAs="String">
-                <value>https://servicioface.cognitiveservices.azure.com/</value>
-            </setting>
-            <setting name="keyFace" serializeAs="String">
-                <value>495d5808afaa455c860b5f8b52f5c22e</value>
-            </setting>
         </AplicacionDeGestion.Properties.Settings>
     </userSettings>
   <runtime>
@@ -77,12 +71,22 @@
         <assemblyIdentity name="SQLitePCLRaw.core" publicKeyToken="1488e028ca7ab535" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-2.0.7.1395" newVersion="2.0.7.1395" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="SQLitePCLRaw.provider.dynamic_cdecl" publicKeyToken="b68184102cba0b3b" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.0.7.1395" newVersion="2.0.7.1395" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <applicationSettings>
     <AplicacionDeGestion.Properties.Settings>
       <setting name="rutaConexionBd" serializeAs="String">
         <value>C:\parking\parking.db</value>
+      </setting>
+      <setting name="endpointFace" serializeAs="String">
+        <value>https://servicioface.cognitiveservices.azure.com/</value>
+      </setting>
+      <setting name="keyFace" serializeAs="String">
+        <value>495d5808afaa455c860b5f8b52f5c22e</value>
       </setting>
     </AplicacionDeGestion.Properties.Settings>
   </applicationSettings>
