--- a/AplicacionDeGestion/Properties/Settings.settings
+++ b/AplicacionDeGestion/Properties/Settings.settings
@@ -23,10 +23,10 @@
     <Setting Name="rutaConexionBd" Type="System.String" Scope="Application">
       <Value Profile="(Default)">C:\parking\parking.db</Value>
     </Setting>
-    <Setting Name="endpointFace" Type="System.String" Scope="User">
+    <Setting Name="endpointFace" Type="System.String" Scope="Application">
       <Value Profile="(Default)">https://servicioface.cognitiveservices.azure.com/</Value>
     </Setting>
-    <Setting Name="keyFace" Type="System.String" Scope="User">
+    <Setting Name="keyFace" Type="System.String" Scope="Application">
       <Value Profile="(Default)">495d5808afaa455c860b5f8b52f5c22e</Value>
     </Setting>
   </Settings>
