--- a/AplicacionDeGestion/App.config
+++ b/AplicacionDeGestion/App.config
@@ -75,6 +75,10 @@
         <assemblyIdentity name="SQLitePCLRaw.provider.dynamic_cdecl" publicKeyToken="b68184102cba0b3b" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-2.0.7.1395" newVersion="2.0.7.1395" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="SQLitePCLRaw.provider.e_sqlite3" publicKeyToken="9c301db686d0bd12" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.0.7.1395" newVersion="2.0.7.1395" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <applicationSettings>
