--- a/AplicacionDeGestion/App.config
+++ b/AplicacionDeGestion/App.config
@@ -84,7 +84,7 @@
   <applicationSettings>
     <AplicacionDeGestion.Properties.Settings>
       <setting name="rutaConexionBd" serializeAs="String">
-        <value>C:\parking\parking.db</value>
+        <value>C:/parking/</value>
       </setting>
       <setting name="endpointFace" serializeAs="String">
         <value>https://servicioface.cognitiveservices.azure.com/</value>
