--- a/AplicacionDeGestion/Properties/Settings.settings
+++ b/AplicacionDeGestion/Properties/Settings.settings
@@ -21,7 +21,7 @@
       <Value Profile="(Default)">50</Value>
     </Setting>
     <Setting Name="rutaConexionBd" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">C:\parking\parking.db</Value>
+      <Value Profile="(Default)">C:/parking/</Value>
     </Setting>
     <Setting Name="endpointFace" Type="System.String" Scope="Application">
       <Value Profile="(Default)">https://servicioface.cognitiveservices.azure.com/</Value>
