--- a/AplicacionDeGestion/AplicacionDeGestion.csproj
+++ b/AplicacionDeGestion/AplicacionDeGestion.csproj
@@ -314,6 +314,13 @@
   <ItemGroup>
     <Resource Include="assets\Icons\añadirVehiculo.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="assets\Icons\accept.png" />
+    <Resource Include="assets\Icons\cancel.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="assets\Icons\menu.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
