--- a/AplicacionDeGestion/AplicacionDeGestion.csproj
+++ b/AplicacionDeGestion/AplicacionDeGestion.csproj
@@ -178,6 +178,7 @@
     <Compile Include="MarcaConverter.cs" />
     <Compile Include="modelos\Cliente.cs" />
     <Compile Include="modelos\Estacionamiento.cs" />
+    <Compile Include="modelos\Marca.cs" />
     <Compile Include="modelos\Vehiculo.cs" />
     <Compile Include="servicios\AzureFaceService.cs" />
     <Compile Include="servicios\AzureBlobStorageService.cs" />
