--- a/AplicacionDeGestion/AplicacionDeGestion.csproj
+++ b/AplicacionDeGestion/AplicacionDeGestion.csproj
@@ -332,6 +332,9 @@
   <ItemGroup>
     <Resource Include="assets\Icons\refresh.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="assets\Icons\mas.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
